--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"guzzlehttp/guzzle": "~4.0",
-		"illuminate/html": "5.*"
+		"illuminate/html": "5.*",
+		"maddhatter/laravel-fullcalendar": "^1.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
